✨ Redesign new property page and upload multiple images component
