# backend/HotelManagement.Infrastructure/EntityFramework/Configuration/PropertyEntityConfiguration.cs
@@ -18,6 +18,7 @@ internal class PropertyEntityConfiguration : IEntityTypeConfiguration<Property>
         builder.Property(q => q.PhoneNumber).IsRequired();
         builder.Property(q => q.Rating).IsRequired();
         builder.Property(q => q.PrepaymentNeeded).IsRequired();
+        builder.Property(q => q.PictureUrls);
 
         builder.Property(q => q.CreatedOn).IsRequired();
         builder.Property(q => q.UpdatedOn).IsRequired();
